# fastapi-builder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: alembic.ini
app/alembic/: env.py
app/alembic/versions/: dc1e94153e6c_create_migration.py
app/api/errors/: http_error.py
app/api/routes/: user.py
app/db/: base.py
app/lib/: jwt.py
app/models/: base.py
app/schemas/: user.py
app/utils/: dbmanager.py  docs.py
docs/: develop.md  tutorial.md
fastapi-cli/: __main__.py  context.py  generator.py  main.py
fastapi-cli/templates/app/: README.md
fastapi-cli/templates/app/api/routes/: authentication.py
fastapi-cli/templates/app/core/: config.py
fastapi-cli/templates/app/lib/: security.py
fastapi-cli/templates/app/models/: mixins.py
fastapi_builder/: __main__.py  config.py  constants.py  context.py  generator.py  helpers.py  main.py  utils.py
fastapi_builder/templates/app/: cookiecutter.json
fastapi_builder/templates/app/app_{{ cookiecutter.folder_name }}/: api.py  doc.py  field.py  model.py  schema.py  service.py
fastapi_builder/templates/project/: cookiecutter.json
fastapi_builder/templates/project/hooks/: post_gen_project.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/: .fastapi-builder  README.md  README_EN.md  alembic.ini  docker-compose.yaml  fastapi-builder.ini  main.py  pyproject.toml  requirements.txt
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/alembic/: README  env.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/alembic/versions/: b09d03e54aaf_autocreate_migration.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/api/errors/: http_error.py  validation_error.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/api/routes/: api.py  authentication.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/app_user/: api.py  model.py  schema.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/apps/app_user/: api.py  doc.py  field.py  model.py  schema.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/core/: .env  config.py  events.py  logger.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/core/e/: __init__.py  codes.py  messages.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/db/: base.py  database.py  events.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/lib/: jwt.py  security.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/middleware/: logger.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/models/: base.py  mixins.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/schemas/: auth.py  base.py  response.py
fastapi_builder/templates/project/{{ cookiecutter.folder_name }}/utils/: dbmanager.py  docs.py
fastapi_cli/: constants.py  context.py  generator.py  helpers.py  main.py
fastapi_cli/templates/app/: requirements.txt
fastapi_cli/templates/app/api/routes/: api.py
fastapi_cli/templates/app/app_{{ cookiecutter.folder_name }}/: schema.py
fastapi_cli/templates/app/core/: events.py
fastapi_cli/templates/project/: cookiecutter.json
fastapi_cli/templates/project/hooks/: post_gen_project.py
fastapi_cli/templates/project/{{ cookiecutter.folder_name }}/: alembic.ini  main.py
fastapi_cli/templates/project/{{ cookiecutter.folder_name }}/core/: logger.py
fastapi_cli/templates/project/{{ cookiecutter.folder_name }}/middleware/: logger.py
fastapi_cli/templates/project/{{ cookiecutter.folder_name }}/schemas/: auth.py  base.py
fastapi_cli/templates/project/{{ cookiecutter.folder_name }}/utils/: consts.py
tests/: reinstall.py  test_db_support.py  test_e2e.py  test_service_generation.py  test_startapp.py  test_startproject.py  utils.py
