[tool.poetry]
name = "fastapi-builder"
version = "2.0.0"
description = "fastapi-builder Project generator and manager for FastAPI"
authors = ["fmw666 <fmw19990718@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_builder"}]
license = "MIT"
keywords = ["fastapi", "builder", "project", "python", "fastapi-builder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
cookiecutter = "^1.7.3"
email-validator = "^1.1.3"
pydantic = "^1.8.2"
pymysql = "^1.0.2"
questionary = "^1.10.0"
typer = "^0.4.0"
setuptools = "<70.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
fastapi = "fastapi_builder.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py38"
exclude = [
    "fastapi_builder/templates/**",
    ".deps",
    ".venv"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
exclude = [
    "fastapi_builder/templates",
    "\\.deps",
    "\\.venv"
]
