[tool.black]
line-length = 100
skip-string-normalization = true

[tool.poetry]
name = "{{ cookiecutter.name }}"
version = "0.1.0"
description = ""
readme = "README.md"
{% if cookiecutter.username != None %}authors = ["{{ cookiecutter.username }} <{{ cookiecutter.email }}>"]{% endif %}

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python }}"
fastapi = "{{ cookiecutter.fastapi }}"
{% if cookiecutter.database == 'MySQL' -%}
aiomysql = "^0.2.0"
pymysql = "^1.1.1"
{% endif -%}
{% if cookiecutter.database == 'PostgreSQL' -%}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
{% endif -%}
{% if cookiecutter.database == 'SQLite' -%}
aiosqlite = "^0.19.0"
{% endif -%}
alembic = "^1.13.2"
bcrypt = "^4.2.0"
databases = "^0.9.0"
email-validator = "^2.2.0"
loguru = "^0.7.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
redis = "^5.0.8"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
{%- if cookiecutter.pre_commit == "True" %}
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"
{%- endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
